--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,5 +1,5 @@
 .jumbotron {
-  background: #ADFF2F;
+  background: #F0FFFF;
   color: white;
   padding-bottom: 80px; }
   .jumbotron .btn-primary {
